// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate add geo request returns valid payload for map 1`] = `
Object {
  "serviceConfiguration": Object {
    "accessType": "AuthorizedUsers",
    "mapStyle": "VectorEsriNavigation",
    "name": "mymapname",
    "pricingPlan": "MobileAssetManagement",
    "serviceName": "Map",
    "setAsDefault": true,
  },
  "version": 1,
}
`;

exports[`validate update geo request returns valid payload for map 1`] = `
Object {
  "serviceModification": Object {
    "accessType": "AuthorizedAndGuestUsers",
    "name": "mymapname",
    "serviceName": "Map",
    "setAsDefault": true,
  },
  "version": 1,
}
`;
